# fluid

./: .gitignore  README.md  build.gradle  settings.vim
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/mishurov/fluid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: add_field.glsl  add_scalar.glsl  advect.glsl  advect_field.glsl  advect_scalar.glsl  boundary.glsl  buoyancy.glsl  converse.glsl  cursor.glsl  divergence.glsl  fill.glsl  fill_packed_zeroes.glsl  gradient.glsl  jacobi.glsl  kernel.glsl  splat.glsl  surface.glsl  visualize.frag  visualize.glsl
app/src/main/java/uk/co/mishurov/fluid/: FluidLib.kt  FluidRenderer.kt  FluidView.kt  MainActivity.kt  NumberPickerPreference.java  NumberPickerPreference.kt  ParticlesActivity.java  ParticlesActivity.kt  ParticlesLib.java  ParticlesLib.kt  ParticlesView.java  ParticlesView.kt  RotatingLayout.java  RotatingLayout.kt  SettingsActivity.java  SettingsActivity.kt
app/src/main/java/uk/co/mishurov/fluid/engine/: Compute.kt  Geometry.kt  Shader.kt  Texture.kt
app/src/main/jni/: CMakeLists.txt  fluid.cpp  fluid.h  gl_code.cpp
app/src/main/jni/engine/: compute.cpp  compute.h  geometry.cpp  geometry.h  log.cpp  log.h  shader.cpp  shader.h  texture.cpp  texture.h
app/src/main/jni/utils/: file.c  file.h  log.c  log.h  opengl.h  shader.c  shader.h
app/src/main/res/layout/: main.xml  no_extension.xml  toaster.xml
app/src/main/res/raw/: advect_field.glsl  converse.glsl  divergence.glsl  fill_packed_zeroes.glsl  jacobi.glsl  surface.glsl  visualize.glsl
app/src/main/res/values/: arrays.xml  attrs.xml  strings.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/example/mishurov/fluid/: ExampleUnitTest.java
gen-libs/: CMakeLists.txt  build.gradle
gen-libs/src/main/cpp/png/: Android.mk  CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
webgl/: index.html  style.css
webgl/js/: compute.js  main.js  shaders
webgl/js/engine/: shader.js
